Intermediate Level Streams and some coding questions